--- a/jenkins-tomcat/docker-compose.yml
+++ b/jenkins-tomcat/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.2'
 services:
   jenkins:
-    image: jenkinsci/jenkins
+    image: jenkins/jenkins
     volumes:
       - ./jenkins:/var/jenkins_home:rw
       - ./war:/mnt/:rw
