--- a/jenkins-artifactory/docker-compose.yml
+++ b/jenkins-artifactory/docker-compose.yml
@@ -11,9 +11,9 @@ services:
       - ./jenkins:/var/jenkins_home:rw
  
   artifactory:
-    image: docker.bintray.io/jfrog/artifactory-oss:latest
+    image: mattgruter/artifactory
     ports:
-      - "9090:8081"
+      - "9090:8080"
     container_name: artifactory
     volumes: 
       - ./artifactory:/artifactory:rw
