--- a/jenkins-artifactory/docker-compose.yml
+++ b/jenkins-artifactory/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 services:
 
   jenkins:
-    image: jenkinsci/jenkins
+    image: jenkins/jenkins
     ports:
       - "8080:8080"
     container_name: jenkins
