--- a/jenkins-tomcat-1/docker-compose.yml
+++ b/jenkins-tomcat-1/docker-compose.yml
@@ -7,6 +7,14 @@ services:
     ports:
       - 8080:8080
     container_name: jenkins
+    
+  artifactory:
+    image: mzain/artifactory-oss:5.4.4
+    ports:
+      - "9090:8081"
+    container_name: artifactory
+    volumes:
+      - ./artifactory:/var/opt/jfrog/artifactory:rw  
   
   tomcat:
     image: tomcat
